Реализован интерактивный файловый менеджер